testing webgazer.js

--- a/index.html
+++ b/index.html
@@ -3,17 +3,33 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>p5.js example</title>
+    <title>Final Project</title>
     <style>
       body {
         padding: 0;
         margin: 0;
         background-color: #1b1b1b;
       }
+
+      canvas {
+        position: fixed !important;
+        top: 0;
+        left: 0;
+        z-index: 10000 !important;
+        pointer-events: none;
+      }
+
+      #webgazerVideoFeed,
+      #webgazerFaceOverlay,
+      #webgazerFaceFeedbackBox {
+        position: fixed !important;
+        z-index: 9990 !important;
+      }
     </style>
     <script src="libraries/p5.min.js"></script>
     <!-- <script src="libraries/addons/p5.sound.js"></script> -->
-    <script src="sketch.js"></script>
+    <script src="https://webgazer.cs.brown.edu/webgazer.js?" defer></script>
+    <script src="sketch.js" defer></script>
   </head>
 
   <body>
