sound effects for mode buttons and ball launch

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       }
     </style>
     <script src="libraries/p5.min.js"></script>
-    <!-- <script src="libraries/addons/p5.sound.js"></script> -->
+    <script src="libraries/addons/p5.sound.js"></script>
     <script src="sketch.js"></script>
   </head>
 
